--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <section>
         <h2>Sobre João</h2>
-        <p>Arthur nascido em 2010, joga futsal desde os 8 anos de idade. Com muito esforço e dedicação, ele vem se destacando nas quadras!</p>
+        <p>Arthur, nascido em 2010, joga futsal desde os 8 anos de idade. Com muito esforço e dedicação, ele vem se destacando nas quadras!</p>
     </section>
 
     <footer>
-        <p>Contate João: <a href="mailto:joao@euatleta.com.br">joao@euatleta.com.br</a></p>
+        <p>Contate João: <a href="mailto:arth7.sk8@gmail.com">arth7.sk8@gmail.com</a></p>
     </footer>
 </body>
 </html>
