--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
 
     <footer>
-        <p>Contate João: <a href="mailto:arth7.sk8@gmail.com">arth7.sk8@gmail.com</a></p>
+        <p>Contato: <a href="mailto:arth7.sk8@gmail.com">arth7.sk8@gmail.com</a></p>
     </footer>
 </body>
 </html>
