--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section>
-        <h2>Sobre João</h2>
+        <h2>Sobre o Arthur</h2>
         <p>Arthur, nascido em 2010, joga futsal desde os 8 anos de idade. Com muito esforço e dedicação, ele vem se destacando nas quadras!</p>
     </section>
 
