--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Arthur Freitas - Jogador de Futsal</h1>
-        <p>Bem-vindo à página oficial de Arthur, atleta dedicado ao futsal!</p>
+        <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
     </header>
 
     <section>
