--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <section>
         <h2>Sobre o Arthur</h2>
-        <h2><p>O Arthur, nasceu em 2010 e iniciou sua trajetória no futsal aos 8 anos. Um esporte que ao longo das décadas, tem conquistado cada vez mais espaço no cenário esportivo mundial. O futsal, originário do Brasil na década de 1930, é uma modalidade que combina habilidades técnicas apuradas e uma dinâmica de jogo rápida e envolvente, o que exige dos atletas uma grande capacidade de adaptação e agilidade.</p></h2>
-        <h2><p>Desde o seu começo, Arthur demonstrou grande empenho e paixão pela modalidade. O futsal não só lhe proporcionou a oportunidade de desenvolver habilidades técnicas e táticas, mas também de aprender importantes valores como trabalho em equipe, perseverança e disciplina. A cada jogo, com muita dedicação e treinamento, ele vem se destacando nas quadras, mostrando a promessa de um futuro brilhante no esporte.</p></h2>
+        <p>O Arthur, nasceu em 2010 e iniciou sua trajetória no futsal aos 8 anos. Um esporte que ao longo das décadas, tem conquistado cada vez mais espaço no cenário esportivo mundial. O futsal, originário do Brasil na década de 1930, é uma modalidade que combina habilidades técnicas apuradas e uma dinâmica de jogo rápida e envolvente, o que exige dos atletas uma grande capacidade de adaptação e agilidade.</p>
+        <p>Desde o seu começo, Arthur demonstrou grande empenho e paixão pela modalidade. O futsal não só lhe proporcionou a oportunidade de desenvolver habilidades técnicas e táticas, mas também de aprender importantes valores como trabalho em equipe, perseverança e disciplina. A cada jogo, com muita dedicação e treinamento, ele vem se destacando nas quadras, mostrando a promessa de um futuro brilhante no esporte.</p>
     </section>
 
     <footer>
