--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arthur Freitas - Jogador de Futsal</title>
+    <title>Arthur Moreira Freitas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Arthur Freitas - Jogador de Futsal</h1>
+        <h1>Arthur Moreira Freitas</h1>
         <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
     </header>
 
