--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Arthur Moreira Freitas</h1>
-        <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Arthur Moreira Freitas</h1>
+            <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
+        </header>
 
-    <section>
-        <h2>Sobre o Arthur</h2>
-        <p>O Arthur, nasceu em 2010 e iniciou sua trajetória no futsal aos 8 anos. Um esporte que ao longo das décadas, tem conquistado cada vez mais espaço no cenário esportivo mundial. O futsal, originário do Brasil na década de 1930, é uma modalidade que combina habilidades técnicas apuradas e uma dinâmica de jogo rápida e envolvente, o que exige dos atletas uma grande capacidade de adaptação e agilidade.</p>
-        <p>Desde o seu começo, Arthur demonstrou grande empenho e paixão pela modalidade. O futsal não só lhe proporcionou a oportunidade de desenvolver habilidades técnicas e táticas, mas também de aprender importantes valores como trabalho em equipe, perseverança e disciplina. A cada jogo, com muita dedicação e treinamento, ele vem se destacando nas quadras, mostrando a promessa de um futuro brilhante no esporte.</p>
-    </section>
+        <section>
+            <h2>Sobre o Arthur</h2>
+            <p>O Arthur, nasceu em 2010 e iniciou sua trajetória no futsal aos 8 anos. Um esporte que ao longo das décadas, tem conquistado cada vez mais espaço no cenário esportivo mundial. O futsal, originário do Brasil na década de 1930, é uma modalidade que combina habilidades técnicas apuradas e uma dinâmica de jogo rápida e envolvente, o que exige dos atletas uma grande capacidade de adaptação e agilidade.</p>
+            <p>Desde o seu começo, Arthur demonstrou grande empenho e paixão pela modalidade. O futsal não só lhe proporcionou a oportunidade de desenvolver habilidades técnicas e táticas, mas também de aprender importantes valores como trabalho em equipe, perseverança e disciplina. A cada jogo, com muita dedicação e treinamento, ele vem se destacando nas quadras, mostrando a promessa de um futuro brilhante no esporte.</p>
+        </section>
+    </div>
 
     <footer>
         <p>Contato: <a href="mailto:arth7.sk8@gmail.com">arth7.sk8@gmail.com</a></p>
