--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <section class="about">
             <div class="text-content">
-                <h2>Sobre o Arthur</h2>
-                <p>O Arthur, nasceu em 2010 e iniciou sua trajetória no futsal aos 8 anos. Um esporte que ao longo das décadas, tem conquistado cada vez mais espaço no cenário esportivo mundial. O futsal, originário do Brasil na década de 1930, é uma modalidade que combina habilidades técnicas apuradas e uma dinâmica de jogo rápida e envolvente, o que exige dos atletas uma grande capacidade de adaptação e agilidade.</p>
-                <p>Desde o seu começo, Arthur demonstrou grande empenho e paixão pela modalidade. O futsal não só lhe proporcionou a oportunidade de desenvolver habilidades técnicas e táticas, mas também de aprender importantes valores como trabalho em equipe, perseverança e disciplina. A cada jogo, com muita dedicação e treinamento, ele vem se destacando nas quadras, mostrando a promessa de um futuro brilhante no esporte.</p>
+                <h2>Sobre mim</h2>
+                <p>Eu nasci em 2010 e comecei minha trajetória no futsal aos 8 anos. Esse esporte, que ao longo das décadas tem conquistado cada vez mais espaço no cenário esportivo mundial, originou-se no Brasil na década de 1930. O futsal é uma modalidade que combina habilidades técnicas apuradas e uma dinâmica de jogo rápida e envolvente, o que exige de nós, atletas, uma grande capacidade de adaptação e agilidade.</p>
+                <p>Desde o meu começo, sempre demonstrei grande empenho e paixão pela modalidade. O futsal não só me proporcionou a oportunidade de desenvolver habilidades técnicas e táticas, mas também de aprender importantes valores, como trabalho em equipe, perseverança e disciplina. A cada jogo, com muita dedicação e treinamento, venho me destacando nas quadras, e sinto que um futuro brilhante no esporte está à minha frente.</p>
             </div>
             <div class="image-content">
                 <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Arthur jogando futsal" />
