--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
         <header>
+            <div class="header-image">
+                <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Arthur jogando futsal" />
+            </div>
             <h1>Arthur Moreira Freitas</h1>
             <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
         </header>
@@ -16,11 +19,8 @@
         <section class="about">
             <div class="text-content">
                 <h2>Sobre mim</h2>
-                <p>Eu nasci em 2010 e comecei minha trajetória no futsal aos 8 anos. Esse esporte, que ao longo das décadas tem conquistado cada vez mais espaço no cenário esportivo mundial, originou-se no Brasil na década de 1930. O futsal é uma modalidade que combina habilidades técnicas apuradas e uma dinâmica de jogo rápida e envolvente, o que exige de nós, atletas, uma grande capacidade de adaptação e agilidade.</p>
-                <p>Desde o meu começo, sempre demonstrei grande empenho e paixão pela modalidade. O futsal não só me proporcionou a oportunidade de desenvolver habilidades técnicas e táticas, mas também de aprender importantes valores, como trabalho em equipe, perseverança e disciplina. A cada jogo, com muita dedicação e treinamento, venho me destacando nas quadras, e sinto que um futuro brilhante no esporte está à minha frente.</p>
-            </div>
-            <div class="image-content">
-                <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Arthur jogando futsal" />
+                <p>Eu nasci em 2010 e comecei minha trajetória no futsal aos 8 anos...</p>
+                <p>Desde o meu começo, sempre demonstrei grande empenho e paixão pela modalidade...</p>
             </div>
         </section>
     </div>
