--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
     <div class="container">
         <header>
+            <div class="header-content">
+                <h1>Arthur Moreira Freitas</h1>
+                <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
+            </div>
             <div class="header-image">
                 <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Arthur jogando futsal" />
             </div>
-            <h1>Arthur Moreira Freitas</h1>
-            <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
         </header>
 
         <section class="about">
