--- a/index.html
+++ b/index.html
@@ -8,23 +8,36 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="header-content">
-                <h1>Arthur Moreira Freitas</h1>
-                <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
-            </div>
-            <div class="header-image">
-                <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Arthur jogando futsal" />
-            </div>
-        </header>
+        <div class="modal">
+            <!-- Cabeçalho -->
+            <header>
+                <div class="header-content">
+                    <h1>Arthur Moreira Freitas</h1>
+                    <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
+                </div>
+                <div class="header-image">
+                    <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Arthur jogando futsal" />
+                </div>
+            </header>
 
-        <section class="about">
-            <div class="text-content">
-                <h2>Sobre mim</h2>
-                <p>Eu nasci em 2010 e comecei minha trajetória no futsal aos 8 anos...</p>
-                <p>Desde o meu começo, sempre demonstrei grande empenho e paixão pela modalidade...</p>
+            <!-- Conteúdo -->
+            <div class="content">
+                <section class="section1">
+                    <div class="text-content">
+                        <h2>Sobre mim</h2>
+                        <p>Eu nasci em 2010 e comecei minha trajetória no futsal aos 8 anos...</p>
+                        <p>Desde o meu começo, sempre demonstrei grande empenho e paixão pela modalidade...</p>
+                    </div>
+                    <div class="image-content">
+                        <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Imagem de Futsal" />
+                    </div>
+                </section>
+
+                <section class="section2">
+                    <p>Conteúdo adicional ou informações sobre Arthur.</p>
+                </section>
             </div>
-        </section>
+        </div>
     </div>
 
     <footer>
