--- a/index.html
+++ b/index.html
@@ -3,30 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arthur Moreira Freitas</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Apresentação do Esportista</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Arthur Moreira Freitas</h1>
-            <p>Bem-vindo à página oficial do Arthur, atleta dedicado ao futsal!</p>
-        </header>
+    <!-- Cabeçalho -->
+    <header>
+        <div class="container">
+            <h1>Perfil do Esportista</h1>
+        </div>
+    </header>
 
-        <section class="about">
-            <div class="text-content">
-                <h2>Sobre mim</h2>
-                <p>Eu nasci em 2010 e comecei minha trajetória no futsal aos 8 anos. Esse esporte, que ao longo das décadas tem conquistado cada vez mais espaço no cenário esportivo mundial, originou-se no Brasil na década de 1930. O futsal é uma modalidade que combina habilidades técnicas apuradas e uma dinâmica de jogo rápida e envolvente, o que exige de nós, atletas, uma grande capacidade de adaptação e agilidade.</p>
-                <p>Desde o meu começo, sempre demonstrei grande empenho e paixão pela modalidade. O futsal não só me proporcionou a oportunidade de desenvolver habilidades técnicas e táticas, mas também de aprender importantes valores, como trabalho em equipe, perseverança e disciplina. A cada jogo, com muita dedicação e treinamento, venho me destacando nas quadras, e sinto que um futuro brilhante no esporte está à minha frente.</p>
+    <!-- Seção de Destaque -->
+    <section id="destaque">
+        <div class="container">
+            <div class="destaque-info">
+                <h2>Nome do Esportista</h2>
+                <p>Função: Atleta / Técnico / Diretor</p>
+                <p>Equipe: Nome da Equipe</p>
+                <p class="descricao">Breve descrição sobre o esportista, sua carreira e conquistas.</p>
             </div>
-            <div class="image-content">
-                <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Arthur jogando futsal" />
+            <div class="destaque-imagem">
+                <img src="imagem-esportista.jpg" alt="Esportista">
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
+    <!-- Seção de Conquistas -->
+    <section id="conquistas">
+        <div class="container">
+            <h2>Conquistas</h2>
+            <ul>
+                <li>Conquista 1</li>
+                <li>Conquista 2</li>
+                <li>Conquista 3</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Seção de Carreira -->
+    <section id="carreira">
+        <div class="container">
+            <h2>Carreira</h2>
+            <p>Detalhes sobre a carreira do esportista, principais momentos e evolução.</p>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
     <footer>
-        <p>Contato: <a href="mailto:arth7.sk8@gmail.com">arth7.sk8@gmail.com</a></p>
+        <div class="container">
+            <p>&copy; 2025 Esportista - Todos os direitos reservados.</p>
+        </div>
     </footer>
+
+    <script src="script.js"></script> <!-- Caso haja necessidade de funcionalidades extras -->
 </body>
 </html>
