--- a/index.html
+++ b/index.html
@@ -1,61 +1,19 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apresentação do Esportista</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Cabeçalho -->
-    <header>
-        <div class="container">
-            <h1>Perfil do Esportista</h1>
-        </div>
-    </header>
-
-    <!-- Seção de Destaque -->
-    <section id="destaque">
-        <div class="container">
-            <div class="destaque-info">
-                <h2>Nome do Esportista</h2>
-                <p>Função: Atleta / Técnico / Diretor</p>
-                <p>Equipe: Nome da Equipe</p>
-                <p class="descricao">Breve descrição sobre o esportista, sua carreira e conquistas.</p>
-            </div>
-            <div class="destaque-imagem">
-                <img src="imagem-esportista.jpg" alt="Esportista">
-            </div>
-        </div>
-    </section>
-
-    <!-- Seção de Conquistas -->
-    <section id="conquistas">
-        <div class="container">
-            <h2>Conquistas</h2>
-            <ul>
-                <li>Conquista 1</li>
-                <li>Conquista 2</li>
-                <li>Conquista 3</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Seção de Carreira -->
-    <section id="carreira">
-        <div class="container">
-            <h2>Carreira</h2>
-            <p>Detalhes sobre a carreira do esportista, principais momentos e evolução.</p>
-        </div>
-    </section>
-
-    <!-- Rodapé -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Esportista - Todos os direitos reservados.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script> <!-- Caso haja necessidade de funcionalidades extras -->
-</body>
-</html>
+<section id="conquistas">
+    <div class="container">
+        <h2>Conquistas</h2>
+        <ul>
+            <li>
+                <h3>Conquista 1</h3>
+                <p>Descrição da conquista número 1 do esportista.</p>
+            </li>
+            <li>
+                <h3>Conquista 2</h3>
+                <p>Descrição da conquista número 2 do esportista.</p>
+            </li>
+            <li>
+                <h3>Conquista 3</h3>
+                <p>Descrição da conquista número 3 do esportista.</p>
+            </li>
+        </ul>
+    </div>
+</section>
