--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esportistas - Plataforma de Apresentação</title>
+    <title>Meu Perfil - [Nome do Atleta]</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -11,76 +11,85 @@
     <!-- Cabeçalho -->
     <header>
         <div class="logo">
-            <h1>Esportistas</h1>
+            <h1>Meu Perfil</h1>
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Início</a></li>
-                <li><a href="#atletas">Atletas</a></li>
-                <li><a href="#tecnicos">Técnicos</a></li>
-                <li><a href="#patrocinadores">Patrocinadores</a></li>
+                <li><a href="#sobre">Sobre Mim</a></li>
+                <li><a href="#carreira">Minha Carreira</a></li>
+                <li><a href="#conquistas">Minhas Conquistas</a></li>
+                <li><a href="#patrocinadores">Meus Patrocinadores</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Seção Hero (Destaque) -->
-    <section id="home" class="hero">
+    <section id="hero" class="hero">
         <div class="hero-content">
-            <h2>Bem-vindo ao Mundo dos Esportistas</h2>
-            <p>Conheça os maiores talentos do esporte.</p>
-            <a href="#atletas" class="btn">Explorar</a>
+            <h2>Olá, eu sou [Nome do Atleta]</h2>
+            <p>Bem-vindo ao meu mundo no esporte.</p>
+            <a href="#sobre" class="btn">Conheça mais sobre mim</a>
         </div>
     </section>
 
-    <!-- Seção de Atletas -->
-    <section id="atletas" class="atletas">
-        <h2>Nossos Atletas</h2>
-        <div class="atletas-grid">
-            <div class="atleta-card">
-                <img src="atleta1.jpg" alt="Atleta 1">
-                <h3>Nome do Atleta 1</h3>
-                <p>Esporte: Futebol</p>
-                <p>Idade: 25 anos</p>
+    <!-- Seção Sobre Mim -->
+    <section id="sobre" class="sobre">
+        <h2>Sobre Mim</h2>
+        <div class="sobre-content">
+            <img src="foto-atleta.jpg" alt="Foto do Atleta">
+            <div class="sobre-texto">
+                <p>Olá! Meu nome é [Nome do Atleta] e sou um(a) [esporte] profissional. Comecei minha jornada no esporte há [X anos] e desde então tenho me dedicado a alcançar meus objetivos e inspirar outras pessoas.</p>
+                <p>Minha paixão pelo esporte começou quando eu era criança, e hoje estou aqui para compartilhar minha história e conquistas com você.</p>
             </div>
-            <div class="atleta-card">
-                <img src="atleta2.jpg" alt="Atleta 2">
-                <h3>Nome do Atleta 2</h3>
-                <p>Esporte: Basquete</p>
-                <p>Idade: 28 anos</p>
-            </div>
-            <!-- Adicione mais cards conforme necessário -->
         </div>
     </section>
 
-    <!-- Seção de Técnicos -->
-    <section id="tecnicos" class="tecnicos">
-        <h2>Nossos Técnicos</h2>
-        <div class="tecnicos-grid">
-            <div class="tecnico-card">
-                <img src="tecnico1.jpg" alt="Técnico 1">
-                <h3>Nome do Técnico 1</h3>
-                <p>Esporte: Vôlei</p>
-                <p>Experiência: 10 anos</p>
+    <!-- Seção Minha Carreira -->
+    <section id="carreira" class="carreira">
+        <h2>Minha Carreira</h2>
+        <div class="carreira-grid">
+            <div class="carreira-card">
+                <h3>Início</h3>
+                <p>Comecei a praticar [esporte] aos [X anos] e desde então nunca mais parei.</p>
             </div>
-            <div class="tecnico-card">
-                <img src="tecnico2.jpg" alt="Técnico 2">
-                <h3>Nome do Técnico 2</h3>
-                <p>Esporte: Futebol</p>
-                <p>Experiência: 15 anos</p>
+            <div class="carreira-card">
+                <h3>Profissionalização</h3>
+                <p>Em [ano], me tornei um(a) atleta profissional e desde então venho competindo em alto nível.</p>
             </div>
-            <!-- Adicione mais cards conforme necessário -->
+            <div class="carreira-card">
+                <h3>Atualmente</h3>
+                <p>Hoje, estou focado(a) em [objetivo atual], buscando sempre superar meus limites.</p>
+            </div>
         </div>
     </section>
 
-    <!-- Seção de Patrocinadores -->
+    <!-- Seção Minhas Conquistas -->
+    <section id="conquistas" class="conquistas">
+        <h2>Minhas Conquistas</h2>
+        <div class="conquistas-grid">
+            <div class="conquista-card">
+                <h3>Título 1</h3>
+                <p>Descrição breve da conquista.</p>
+            </div>
+            <div class="conquista-card">
+                <h3>Título 2</h3>
+                <p>Descrição breve da conquista.</p>
+            </div>
+            <div class="conquista-card">
+                <h3>Título 3</h3>
+                <p>Descrição breve da conquista.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Seção Meus Patrocinadores -->
     <section id="patrocinadores" class="patrocinadores">
-        <h2>Nossos Patrocinadores</h2>
+        <h2>Meus Patrocinadores</h2>
         <div class="patrocinadores-grid">
             <img src="patrocinador1.png" alt="Patrocinador 1">
             <img src="patrocinador2.png" alt="Patrocinador 2">
             <img src="patrocinador3.png" alt="Patrocinador 3">
-            <!-- Adicione mais logos de patrocinadores conforme necessário -->
         </div>
     </section>
 
@@ -89,8 +98,8 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Contato</h3>
-                <p>Email: contato@esportistas.com</p>
-                <p>Telefone: (11) 1234-5678</p>
+                <p>Email: [email@atleta.com]</p>
+                <p>Telefone: [(XX) XXXX-XXXX]</p>
             </div>
             <div class="footer-section">
                 <h3>Redes Sociais</h3>
@@ -100,7 +109,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 Esportistas. Todos os direitos reservados.</p>
+            <p>&copy; 2023 [Nome do Atleta]. Todos os direitos reservados.</p>
         </div>
     </footer>
 
