--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="carreira-card">
                 <h3>Profissionalização</h3>
-                <p>Em 2023, me tornei um atleta federedo e desde então venho competindo em alto nível.</p>
+                <p>Em 2023, me tornei um atleta federado e desde então venho competindo em alto nível.</p>
             </div>
             <div class="carreira-card">
                 <h3>Atualmente</h3>
