--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="carreira-card">
                 <h3>Atualmente</h3>
-                <p>Hoje, estou focado em dar continuidade como atleta e constituir uma carreira e participar da melhores competições, buscando sempre superar meus limites.</p>
+                <p>Hoje, estou focado em dar continuidade como atleta, constituir uma carreira e participar da melhores competições, buscando sempre superar meus limites.</p>
             </div>
         </div>
     </section>
