--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 [Nome do Atleta]. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Arthur Moreira Freitas. Todos os direitos reservados.</p>
         </div>
     </footer>
 
