--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Perfil - Arthur Moreira Freitas</title> /* Nome do Atleta */
+    <title>Meu Perfil - Arthur Moreira Freitas</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -27,7 +27,7 @@
     <!-- Seção Hero (Destaque) -->
     <section id="hero" class="hero">
         <div class="hero-content">
-            <h2>Olá, sou o Arthur Moreira Freitas</h2> /* Nome do Atleta */
+            <h2>Olá, sou o Arthur Moreira Freitas</h2>
             <p>Bem-vindo ao meu mundo no esporte.</p>
             <a href="#sobre" class="btn">Conheça mais sobre mim</a>
         </div>
