--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Perfil - Arthur Moreira Freitas</title>
+    <title>Meu Perfil - [Nome do Atleta]</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -27,7 +27,7 @@
     <!-- Seção Hero (Destaque) -->
     <section id="hero" class="hero">
         <div class="hero-content">
-            <h2>Olá, sou o Arthur Moreira Freitas</h2>
+            <h2>Olá, eu sou [Nome do Atleta]</h2>
             <p>Bem-vindo ao meu mundo no esporte.</p>
             <a href="#sobre" class="btn">Conheça mais sobre mim</a>
         </div>
@@ -37,9 +37,9 @@
     <section id="sobre" class="sobre">
         <h2>Sobre Mim</h2>
         <div class="sobre-content">
-            <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Foto do Atleta">
+            <img src="foto-atleta.jpg" alt="Foto do Atleta">
             <div class="sobre-texto">
-                <p>Olá! Meu nome é Arthur, nascido em 2010. Sou atleta, jogo futsal na posição de ala direita. Comecei minha jornada no esporte há 6 anos e desde então tenho me dedicado a alcançar meus objetivos e inspirar outras pessoas.</p>
+                <p>Olá! Meu nome é [Nome do Atleta] e sou um(a) [esporte] profissional. Comecei minha jornada no esporte há [X anos] e desde então tenho me dedicado a alcançar meus objetivos e inspirar outras pessoas.</p>
                 <p>Minha paixão pelo esporte começou quando eu era criança, e hoje estou aqui para compartilhar minha história e conquistas com você.</p>
             </div>
         </div>
@@ -51,31 +51,35 @@
         <div class="carreira-grid">
             <div class="carreira-card">
                 <h3>Início</h3>
-                <p>Comecei a praticar o futsal aos 8 anos e desde então nunca mais parei.</p>
+                <p>Comecei a praticar [esporte] aos [X anos] e desde então nunca mais parei.</p>
             </div>
             <div class="carreira-card">
                 <h3>Profissionalização</h3>
-                <p>Em 2023, me tornei um atleta federado e desde então venho competindo em alto nível.</p>
+                <p>Em [ano], me tornei um(a) atleta profissional e desde então venho competindo em alto nível.</p>
             </div>
             <div class="carreira-card">
                 <h3>Atualmente</h3>
-                <p>Hoje, estou focado em dar continuidade como atleta, constituir uma carreira e participar da melhores competições, buscando sempre superar meus limites.</p>
+                <p>Hoje, estou focado(a) em [objetivo atual], buscando sempre superar meus limites.</p>
             </div>
         </div>
     </section>
 
     <!-- Seção Minhas Conquistas -->
     <section id="conquistas" class="conquistas">
-        <h2>Minhas ultimas Conquistas</h2>
+        <h2>Minhas Conquistas</h2>
         <div class="conquistas-grid">
             <div class="conquista-card">
-                <h3>Vice Campeão Estadual - 2024</h3>
-                <p>Federação Paulista de Futsal - Categoria Prata A2.</p>
+                <h3>Título 1</h3>
+                <p>Descrição breve da conquista.</p>
             </div>
             <div class="conquista-card">
-                <h3>Campeão Metropolitano - 2024</h3>
-                <p>Federação Paulista de Futsal - Categoria Bronze A2</p>
-            </div>           
+                <h3>Título 2</h3>
+                <p>Descrição breve da conquista.</p>
+            </div>
+            <div class="conquista-card">
+                <h3>Título 3</h3>
+                <p>Descrição breve da conquista.</p>
+            </div>
         </div>
     </section>
 
@@ -94,7 +98,8 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Contato</h3>
-                <p>Email: arth7.sk8@gmail.com</p>                
+                <p>Email: [email@atleta.com]</p>
+                <p>Telefone: [(XX) XXXX-XXXX]</p>
             </div>
             <div class="footer-section">
                 <h3>Redes Sociais</h3>
@@ -104,7 +109,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Arthur Moreira Freitas. Todos os direitos reservados.</p>
+            <p>&copy; 2023 [Nome do Atleta]. Todos os direitos reservados.</p>
         </div>
     </footer>
 
