--- a/index.html
+++ b/index.html
@@ -34,86 +34,4 @@
     </section>
 
     <!-- Seção Sobre Mim -->
-    <section id="sobre" class="sobre">
-        <h2>Sobre Mim</h2>
-        <div class="sobre-content">
-            <img src="foto-atleta.jpg" alt="Foto do Atleta">
-            <div class="sobre-texto">
-                <p>Olá! Meu nome é [Nome do Atleta] e sou um(a) [esporte] profissional. Comecei minha jornada no esporte há [X anos] e desde então tenho me dedicado a alcançar meus objetivos e inspirar outras pessoas.</p>
-                <p>Minha paixão pelo esporte começou quando eu era criança, e hoje estou aqui para compartilhar minha história e conquistas com você.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Seção Minha Carreira -->
-    <section id="carreira" class="carreira">
-        <h2>Minha Carreira</h2>
-        <div class="carreira-grid">
-            <div class="carreira-card">
-                <h3>Início</h3>
-                <p>Comecei a praticar [esporte] aos [X anos] e desde então nunca mais parei.</p>
-            </div>
-            <div class="carreira-card">
-                <h3>Profissionalização</h3>
-                <p>Em [ano], me tornei um(a) atleta profissional e desde então venho competindo em alto nível.</p>
-            </div>
-            <div class="carreira-card">
-                <h3>Atualmente</h3>
-                <p>Hoje, estou focado(a) em [objetivo atual], buscando sempre superar meus limites.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Seção Minhas Conquistas -->
-    <section id="conquistas" class="conquistas">
-        <h2>Minhas Conquistas</h2>
-        <div class="conquistas-grid">
-            <div class="conquista-card">
-                <h3>Título 1</h3>
-                <p>Descrição breve da conquista.</p>
-            </div>
-            <div class="conquista-card">
-                <h3>Título 2</h3>
-                <p>Descrição breve da conquista.</p>
-            </div>
-            <div class="conquista-card">
-                <h3>Título 3</h3>
-                <p>Descrição breve da conquista.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Seção Meus Patrocinadores -->
-    <section id="patrocinadores" class="patrocinadores">
-        <h2>Meus Patrocinadores</h2>
-        <div class="patrocinadores-grid">
-            <img src="patrocinador1.png" alt="Patrocinador 1">
-            <img src="patrocinador2.png" alt="Patrocinador 2">
-            <img src="patrocinador3.png" alt="Patrocinador 3">
-        </div>
-    </section>
-
-    <!-- Rodapé -->
-    <footer id="contato">
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Contato</h3>
-                <p>Email: [email@atleta.com]</p>
-                <p>Telefone: [(XX) XXXX-XXXX]</p>
-            </div>
-            <div class="footer-section">
-                <h3>Redes Sociais</h3>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2023 [Nome do Atleta]. Todos os direitos reservados.</p>
-        </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="scripts.js"></script>
-</body>
-</html>
+    <section id="so
