--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="sobre-content">
             <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Foto do Atleta">
             <div class="sobre-texto">
-                <p>Olá! Meu nome é Arthur e sou um atleta jogador de futsal, federado. Comecei minha jornada no esporte há 6 anos e desde então tenho me dedicado a alcançar meus objetivos e inspirar outras pessoas.</p>
+                <p>Olá! Meu nome é Arthur, sou um atleta jogador de futsal federado. Comecei minha jornada no esporte há 6 anos e desde então tenho me dedicado a alcançar meus objetivos e inspirar outras pessoas.</p>
                 <p>Minha paixão pelo esporte começou quando eu era criança, e hoje estou aqui para compartilhar minha história e conquistas com você.</p>
             </div>
         </div>
