--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="carreira-card">
                 <h3>Atualmente</h3>
-                <p>Hoje, estou focado em constituir um carreira solida no futsal, buscando sempre superar minhas limitações.</p>
+                <p>Hoje, estou focado em constituir uma carreira solida no futsal, buscando sempre superar minhas limitações.</p>
             </div>
         </div>
     </section>
