--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Seção Hero (Destaque) -->
     <section id="hero" class="hero">
         <div class="hero-content">
-            <h2>Olá, sou o Arthur Moreira Freitas</h2>
+            <h2>Arthur Moreira Freitas</h2>
             <p>Bem-vindo ao meu mundo no esporte.</p>
             <a href="#sobre" class="btn">Conheça mais sobre mim</a>
         </div>
