--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Seção Hero (Destaque) -->
     <section id="hero" class="hero">
         <div class="hero-content">            
-            <p>Bem-vindo ao meu mundo no esporte.</p>
+            <p>Bem-vindo ao meu mundo no esporte</p>
             <a href="#sobre" class="btn">Conheça mais sobre mim</a>
             <h2>Arthur Moreira Freitas</h2>
         </div>
@@ -73,7 +73,7 @@
                 <p>Série Prata A2 - Federação Paulista de Futsal.</p>
             </div>
             <div class="conquista-card">
-                <h3>Campão - Campeonato Metropolitano - 2024</h3>
+                <h3>Campeão - Campeonato Metropolitano - 2024</h3>
                 <p>Série Bronze A2 - Federação Paulista de Futsal.</p>
             </div>         
         </div>
