--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         <h2>Minhas últimas Conquistas</h2>
         <div class="conquistas-grid">
             <div class="conquista-card">
-                <h3>Vice Campeão - Campeonato Estadual - 2024</h3>
+                <h3>Vice Campeão Estadual - 2024</h3>
                 <p>Série Prata A2 - Federação Paulista de Futsal.</p>
             </div>
             <div class="conquista-card">
-                <h3>Campeão - Campeonato Metropolitano - 2024</h3>
+                <h3>Campeão Metropolitano - 2024</h3>
                 <p>Série Bronze A2 - Federação Paulista de Futsal.</p>
             </div>         
         </div>
