--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             </div>
             <div class="footer-section">
                 <h3>Redes Sociais</h3>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
+                <a href="https://www.instagram.com/arthuzinho_.010?igsh=bmhycTFmMmluejls"><i class="fab fa-instagram"></i></a>
+                <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
             </div>
         </div>
         <div class="footer-bottom">
