--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Cabeçalho -->
     <header>
         <div class="logo">
-            <h1>Meu Perfil</h1>
+            <h1>Arthur Moreira Freitas</h1>
         </div>
         <nav>
             <ul>
