--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         </nav>
     </header>
 
-    <!-- Seção Hero (Destaque) -->
+    <!-- Seção Hero (Destaque) 
     <section id="hero" class="hero">
         <div class="hero-content">            
             <p>Bem-vindo ao meu mundo no esporte</p>
             <a href="#sobre" class="btn">Conheça mais sobre mim</a>
             <h2>Arthur Moreira Freitas</h2>
         </div>
-    </section>
+    </section> -->
 
     <!-- Seção Sobre Mim -->
     <section id="sobre" class="sobre">
