--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 <!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
                 <a href="https://www.instagram.com/arthuzinho_.010?igsh=bmhycTFmMmluejls"><i class="fab fa-instagram"></i></a>
                 <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
+                <a href="https://www.tiktok.com/@arthuzinho_.010?_t=ZM-8tNaFHByBE5&_r=1"><i class="fab fa-tiktok"></i></a>
             </div>
         </div>
         <div class="footer-bottom">
