--- a/index.html
+++ b/index.html
@@ -3,113 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Perfil - Arthur</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>Minha Página</title>
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="body.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
-    <!-- Cabeçalho -->
-    <header>
-        <div class="logo">
-            <h1>Arthur Moreira Freitas</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#sobre">Sobre Mim</a></li>
-                <li><a href="#carreira">Minha Carreira</a></li>
-                <li><a href="#conquistas">Minhas Conquistas</a></li>
-                <li><a href="#patrocinadores">Meus Patrocinadores</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Seção Hero (Destaque) -->
-    <section id="hero" class="hero">
-     <!--   <div class="hero-content">            
-            <p>Bem-vindo ao meu mundo no esporte</p>
-            <a href="#sobre" class="btn">Conheça mais sobre mim</a>
-            <h2>Arthur Moreira Freitas</h2> -->
-        </div>
-    </section> 
-
-    <!-- Seção Sobre Mim -->
-    <section id="sobre" class="sobre">
-        <h2>Sobre Mim</h2>
-        <div class="sobre-content">
-            <img src="https://esportista.github.io/arquivo/imagens/Arthur.png" alt="Foto do Atleta">
-            <div class="sobre-texto">
-                <p>Olá! Meu nome é Arthur, sou um atleta jogador de futsal federado. Comecei minha jornada no esporte há 6 anos e desde então tenho me dedicado a alcançar meus objetivos e inspirar outras pessoas.</p>
-                <p>Minha paixão pelo esporte começou quando eu era criança, e hoje estou aqui para compartilhar minha história e conquistas com você.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Seção Minha Carreira -->
-    <section id="carreira" class="carreira">
-        <h2>Minha Carreira</h2>
-        <div class="carreira-grid">
-            <div class="carreira-card">
-                <h3>Início</h3>
-                <p>Comecei a praticar o futsal aos 8 anos e desde então nunca mais parei.</p>
-            </div>
-            <div class="carreira-card">
-                <h3>Profissionalização</h3>
-                <p>Em 2023, me tornei um atleta federado e desde então venho competindo em alto nível.</p>
-            </div>
-            <div class="carreira-card">
-                <h3>Atualmente</h3>
-                <p>Hoje, estou focado em constituir uma carreira solida no futsal, buscando sempre superar minhas limitações.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Seção Minhas Conquistas -->
-    <section id="conquistas" class="conquistas">
-        <h2>Minhas últimas Conquistas</h2>
-        <div class="conquistas-grid">
-            <div class="conquista-card">
-                <h3>Vice Campeão Estadual - 2024</h3>
-                <p>Série Prata A2 - Federação Paulista de Futsal.</p>
-            </div>
-            <div class="conquista-card">
-                <h3>Campeão Metropolitano - 2024</h3>
-                <p>Série Bronze A2 - Federação Paulista de Futsal.</p>
-            </div>         
-        </div>
-    </section>
-
-    <!-- Seção Meus Patrocinadores -->
-    <section id="patrocinadores" class="patrocinadores">
-        <h2>Meus Patrocinadores</h2>
-        <div class="patrocinadores-grid">
-            <img src="patrocinador1.png" alt="Patrocinador 1">
-            <img src="patrocinador2.png" alt="Patrocinador 2">
-            <img src="patrocinador3.png" alt="Patrocinador 3">
-        </div>
-    </section>
-
-    <!-- Rodapé -->
-    <footer id="contato">
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Contato</h3>
-                <p>Email: arth7.sk8@gmail.com</p>           
-            </div>
-            <div class="footer-section">
-                <h3>Redes Sociais</h3>
-                <!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
-                <a href="https://www.instagram.com/arthuzinho_.010?igsh=bmhycTFmMmluejls"><i class="fab fa-instagram"></i></a>
-                <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
-                <a href="https://www.tiktok.com/@arthuzinho_.010?_t=ZM-8tNaFHByBE5&_r=1"><i class="fab fa-tiktok"></i></a>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Arthur Moreira Freitas. Todos os direitos reservados.</p>
-        </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="scripts.js"></script>
+    <!-- Código HTML aqui -->
+    <script src="script.js"></script>
 </body>
 </html>
